Reduce .nav margin to avoid double-scrollbars

--- a/app/assets/stylesheets/gcms.css
+++ b/app/assets/stylesheets/gcms.css
@@ -603,7 +603,7 @@ nav {
 	display:inline-block;
 }
 
-.nav { margin-bottom:7px; }
+.nav { margin-bottom: 2px; }
 
 .modal-header > nav {
 	padding:5px 10px;
